{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 46,
  "lineage": "891f197c-099a-0350-8229-cee15ff115b0",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541614061098:vpc/vpc-0a2065519f9bb9bb3",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0bba83e0b31b306a6",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0c79346544c98c4ad",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a2065519f9bb9bb3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e1a46cf0c28a867e",
            "owner_id": "541614061098"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "streamlit",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:541614061098:loadbalancer/app/devops-chatbot-alb/4f5c87f7d1dc6994",
            "arn_suffix": "app/devops-chatbot-alb/4f5c87f7d1dc6994",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "devops-chatbot-alb-1583798999.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:541614061098:loadbalancer/app/devops-chatbot-alb/4f5c87f7d1dc6994",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops-chatbot-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-077e65c724380b5f2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-001a1903271b0ff29"
              },
              {
                "subnet_id": "subnet-00d610bd10d597945"
              },
              {
                "subnet_id": "subnet-01b946a17f119bbed"
              },
              {
                "subnet_id": "subnet-03279076b93a5a9c6"
              },
              {
                "subnet_id": "subnet-0a6239d27aa57fcee"
              },
              {
                "subnet_id": "subnet-0b67892cfbdc178ac"
              }
            ],
            "subnets": [
              "subnet-001a1903271b0ff29",
              "subnet-00d610bd10d597945",
              "subnet-01b946a17f119bbed",
              "subnet-03279076b93a5a9c6",
              "subnet-0a6239d27aa57fcee",
              "subnet-0b67892cfbdc178ac"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "devops-chatbot-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-chatbot-alb"
            },
            "vpc_id": "vpc-0a2065519f9bb9bb3",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:541614061098:listener/app/devops-chatbot-alb/4f5c87f7d1dc6994/05b66731bae03aee",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:541614061098:targetgroup/devops-chatbot-tg/650a3bba658a9440",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:541614061098:listener/app/devops-chatbot-alb/4f5c87f7d1dc6994/05b66731bae03aee",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:541614061098:loadbalancer/app/devops-chatbot-alb/4f5c87f7d1dc6994",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.streamlit",
            "aws_lb_target_group.streamlit",
            "aws_security_group.alb",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "streamlit",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:541614061098:targetgroup/devops-chatbot-tg/650a3bba658a9440",
            "arn_suffix": "targetgroup/devops-chatbot-tg/650a3bba658a9440",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/_stcore/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:541614061098:targetgroup/devops-chatbot-tg/650a3bba658a9440",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:541614061098:loadbalancer/app/devops-chatbot-alb/4f5c87f7d1dc6994"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "devops-chatbot-tg",
            "port": 8501,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "devops-chatbot-tg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-chatbot-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a2065519f9bb9bb3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541614061098:security-group/sg-077e65c724380b5f2",
            "description": "Trafic HTTP entrant vers ALB Streamlit",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-077e65c724380b5f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP depuis Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devops-chatbot-alb-sg",
            "name_prefix": "",
            "owner_id": "541614061098",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "devops-chatbot-alb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-chatbot-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2065519f9bb9bb3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:541614061098:security-group/sg-09798100113185921",
            "description": "Trafic Streamlit port 8501 depuis ALB uniquement",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09798100113185921",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Streamlit depuis ALB",
                "from_port": 8501,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-077e65c724380b5f2"
                ],
                "self": false,
                "to_port": 8501
              }
            ],
            "name": "devops-chatbot-ecs-sg",
            "name_prefix": "",
            "owner_id": "541614061098",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "devops-chatbot-ecs-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "devops-chatbot-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2065519f9bb9bb3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}